# Prism

./: README.md
backend/: Cargo.toml
backend/src/: main.rs  router.rs
backend/src/auth/: mod.rs
backend/src/jobs/: job.rs
backend/src/rxtx/: mod.rs
backend/src/rxtx/database/: mod.rs  pool.rs
backend/src/rxtx/network/: mod.rs  multipart.rs  response.rs
backend/src/tools/: mod.rs
backend/src/tools/image/: convert.rs
frontend/: angular.json  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.json
frontend/src/: styles.scss
frontend/src/app/: app.html  app.ts
frontend/src/app/Services/: base-service.spec.ts  base-service.ts  image-service.ts
