[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower = "0.5.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Conversion
image = "0.25.10"

