[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["sqlite", "migrate", "runtime-tokio", "uuid", "chrono"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "10.4.0"

# Types
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# Image processing
image = "0.25"

# Error handling
thiserror = "2"